2007-02-11  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/ExtendedContext.java: 
	* src/de/schlund/pfixcore/scriptedflow/vm/ScriptVM.java: 
	* src/de/schlund/pfixcore/workflow/Context.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixxml/ContextXMLServlet.java: 
	Moved handleRequest() method out of Context interface into new
	ExtendedContext interface.

2007-02-09  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java (precedingFlowNeedsData): 
	* src/de/schlund/pfixcore/workflow/Context.java (precedingFlowNeedsData): 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java (precedingFlowNeedsData): 
	Renamed flowStepsBeforeCurrentStepNeedData() to precedingFlowNeedsData().

	* projects/core/schema/scriptedflow200602.xsd: 
	* projects/sample1/conf/scriptedflow/forceadult.script.xml: 
	* projects/sample1/conf/scriptedflow/ordershirt.script.xml: 
	Added XML Schema for scripted flows.
	
	* src/de/schlund/pfixcore/scriptedflow/ScriptedFlowConfig.java: 
	* src/de/schlund/pfixcore/util/basicapp/helper/AppValues.java: 
	* src/de/schlund/pfixcore/workflow/app/DefaultAuthIWrapperState.java: 
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/context/ServerContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/DirectOutputState.java: 
	* src/de/schlund/pfixxml/config/AbstractXMLServletConfig.java: 
	* src/de/schlund/pfixxml/config/ConfigReader.java: 
	* src/de/schlund/pfixxml/config/ContextXMLServletConfig.java: 
	* src/de/schlund/pfixxml/config/DirectOutputServletConfig.java: 
	* src/de/schlund/pfixxml/multipart/MultipartHandler.java: 
	* src/de/schlund/pfixxml/perflogging/DefaultAdditionalTrailInfoImpl.java: 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* src/de/schlund/pfixxml/ContextXMLServlet.java: 